fix: fix caret color in dark mode

--- a/packages/ui/src/css/index.css
+++ b/packages/ui/src/css/index.css
@@ -14,3 +14,7 @@ p, span, h1, h2, h3, h4, h5, h6 {
 a {
   -webkit-user-drag: none;
 }
+
+input {
+  caret-color: var(--text);
+}
